upload image ok butr still need exception