@@ -54,7 +54,7 @@ private static final ModelMapper modelMapper;
     public static <D, T> List<D> mapAll(final Collection<T> entityList, Class<D> outCLass) {
         return entityList.stream()
                 .map(entity -> map(entity, outCLass))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
